# skratched

./: .gitignore  CAM_KB_REASSESSMENT_2026-06-18.md  CAM_MODEL_BAKEOFF_finESS_2026-06-17.md  GOAL.md  IMPLEMENTATION_PACKET.md  PROGRESS.md  README.md  SETUP_GAPS.md  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/plans/: 2026-06-19-mcp-server.md  2026-06-19-release-readiness.md  2026-06-19-wow-landing-page.md
scripts/: browser_smoke.mjs  demo_flow.py  generate_readme_screenshots.mjs
skratched/: __init__.py  ai.py  analyze.py  cli.py  config.py  export.py  mcp_server.py  semantic.py  storage.py  watcher.py
static/: app.js  index.html  styles.css
tests/: test_api_workflows.py  test_config.py  test_core.py  test_demo_flow.py  test_generated_artifacts.py  test_mcp_server.py  test_packaging.py  test_property_invariants.py  test_readme_landing.py  test_watcher.py
